--- a/package.json
+++ b/package.json
@@ -2,10 +2,39 @@
   "name": "itb_media_controls",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pavelnaumov/ITB_Media_Controls.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pavelnaumov/ITB_Media_Controls/issues"
+  },
+  "homepage": "https://github.com/pavelnaumov/ITB_Media_Controls#readme",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "*",
+    "@types/react-native": "^0.61.23",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "prettier": "^2.0.1",
+    "react": "^16.13.1",
+    "react-native": "^0.61.5",
+    "tslint": "^6.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  }
 }
